testsuite/poke.pkl/funcall-vararg-diag-2.pk
/* { dg-do compile } */

fun foo = (args..., int a) int: /* { dg-error "" } */
  {
   return args[0] as int;
  }
